<resources>
    <string name="app_name">TVApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For You</string>
    <string name="search">Search</string>
    <string name="live">Live</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="content_desc_preview_poster">Preview poster for selected movie.</string>
</resources>