<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewFragment">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.google.android.material.tabs.TabLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusedByDefault="true">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:nextFocusLeft="@id/tiSearch"
            android:nextFocusRight="@id/tiForYou"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiForYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_you"
            android:nextFocusLeft="@id/tiSearch"
            android:nextFocusRight="@id/tiLive"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live"
            android:nextFocusLeft="@id/tiForYou"
            android:nextFocusRight="@id/tiMovies"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:nextFocusLeft="@id/tiLive"
            android:nextFocusRight="@id/tiShows"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiShows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shows"
            android:nextFocusLeft="@id/tiMovies"
            android:nextFocusRight="@id/tiShows"/>
    </com.google.android.material.tabs.TabLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:text="@string/hello_blank_fragment"
            android:textSize="48sp"
            android:textColor="@color/black_txt"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".8"
            android:text="@string/hello_blank_fragment"
            android:textSize="24sp"
            android:textColor="@color/black_txt"/>
    </LinearLayout>
</FrameLayout>